[package]
name = "hlsl_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
thiserror = "1.0.31"
widestring = "1.0.1"

[dependencies.windows]
version = "0.36.0"
features = [
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Hlsl"
]